--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 :root {
   --cell-size: 4rem;
-  --game-padding: 0.1rem;
+  --game-padding: 0rem;
   --border-width: 0.1rem;
   --cells-in-row: 8;
-  --piece-size: 3rem;
+  --piece-size: 80%;
+
+  --font-size: 2.2rem;
 
   --possible-move-color: yellow;
   --possible-jump-color: rgb(75, 207, 75);
@@ -19,7 +21,7 @@
   ); */
 
   --game-max-width: calc(
-    var(--cell-size) * var(--cells-in-row) + calc(16 * (var(--border-width)))
+    var(--cells-in-row) * (var(--cell-size)) + calc(20 * (var(--border-width)))
   );
 }
 *,
@@ -27,31 +29,58 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
+
 main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  /* position: absolute; */
+  /* top: 20%;
+  left: 20%; */
   display: grid;
-  grid-template-columns: 1fr 7fr 1fr;
-  grid-template-rows: 1fr 6fr 1fr;
+  grid-template-rows: 10rem auto 10rem;
+  grid-template-areas:
+    "header"
+    "table"
+    "footer";
+  /* grid-template-columns: 3rem 5fr 3rem;
+  grid-template-rows: 5rem auto 5rem;
+  grid-template-areas:
+    ". header ."
+    ". table ."
+    ". footer ."; */
+  /* grid-template-columns: 1fr 7fr 1fr;
+  grid-template-rows: 1fr 7fr 1fr;
   grid-template-areas:
     "timer1 header timer2"
     "player1 table player2"
     "nothin board nothin"
-    "footer1 footer2 footer3";
+    "footer1 footer2 footer3"; */
 }
 
-.title {
-  /* height: 5vh; */
-  /* grid-area: header; */
+/* .title {
+  height: 5vh; 
+  grid-area: header; 
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row: 1;
-}
+} */
 
 .table {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row: 2;
+  /* position: relative; */
+  /* top: 50%;
+  left: 50%; */
+  grid-area: table;
+  display: flex;
+  /* padding: 2rem 3rem 3rem 3rem; */
+  /* grid-column-start: 1;
+  grid-column-end: 4; */
+  /* grid-row: 2; */
   /* grid-area: table; */
   /* display: flex;
   justify-content: center;
@@ -60,39 +89,39 @@ main {
   perspective-origin: center;
   /* background-color: black; */
   /* padding-top: 10vh; */
-  /* width: 100vw; */
+  /* width: 100vh; */
   /* height: 55vh; */
   background-image: url(../assets/wood.jpg);
-  background-size: 100%;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
   /* z-index: -2; */
 }
 
 .player1 {
-  grid-area: player1;
+  grid-area: header;
   display: flex;
   /* margin: 0 auto; */
-  padding: 0.4rem;
+  padding: 0.2rem;
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  z-index: 1;
+  /* z-index: 1; */
   background-color: blanchedalmond;
-  font-size: 35px;
+  /* font-size: 4rem; */
   text-align: center;
 }
 
 .player2 {
-  grid-area: player1;
+  grid-area: footer;
   display: flex;
-  padding: 0.4rem;
+  padding: 0.2rem;
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  z-index: 1;
+  /* z-index: 1; */
   background-color: blanchedalmond;
-  font-size: 35px;
+  /* font-size: 35px; */
   text-align: center;
 }
 
@@ -100,9 +129,10 @@ main {
 .player2__name {
   /* border: 0.3rem solid #000; */
   margin: 0 2rem;
+  font-weight: 550;
   /* align-items: flex-end; */
   padding: 0.3rem 0.3rem;
-  font-size: 2.4rem;
+  font-size: var(--font-size);
 }
 .player1__timer,
 .player2__timer {
@@ -111,20 +141,22 @@ main {
   margin: 0 2rem;
   align-items: flex-end;
   padding: 0.3rem 1.8rem;
-  font-size: 2.4rem;
+  font-size: var(--font-size);
 }
 
 .board {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
-  grid-area: table;
+
+  /* grid-area: table; */
   transform: rotateX(30deg);
-  margin: 0 auto;
+  margin: auto;
   width: var(--game-max-width);
   /* max-width: 50vh; */
   /* height: 50vh; */
   /* padding: 10px; */
-  border: 13px solid transparent;
+  border: 1rem solid transparent;
   border-image: url(../assets/wood2.jpg) 5% round;
   /* z-index: 1; */
 
@@ -137,29 +169,28 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: var(--border-width) solid rgb(80, 80, 80);
   /* cursor: pointer; */
   /* z-index: 10; */
 }
 
-.boardBottom {
+/* .boardBottom {
   grid-area: footer2;
   margin: 0 auto;
   /* width: 70vw; */
-  /* max-width: 30rem; */
-  /* height: 3vh; */
+/* max-width: 30rem; */
+/* height: 3vh; 
   background-color: rgb(114, 87, 52);
-}
+} */
 
 .brown {
   background: url(../assets/wooden.jpg) center no-repeat;
   background-size: 120%;
-  border: var(--border-width) solid rgb(80, 80, 80);
 }
 
 .white {
   background: url(../assets/white.jpg) center no-repeat;
   background-size: 200%;
-  border: var(--border-width) solid rgb(80, 80, 80);
 }
 
 .piece {
@@ -217,7 +248,7 @@ main {
 }
 
 .canJump {
-  /* background-color: var(--piece-can-jump); */
+  background-color: var(--piece-can-jump);
   box-shadow: 0px 0px 0px 0.5rem var(--piece-can-jump) inset;
 }
 
@@ -291,3 +322,396 @@ main {
 .starter__modal--hidden {
   visibility: hidden;
 }
+
+/* @media only screen and (min-width: 320px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 100vw;
+    height: 80vh;
+  }
+
+  :root {
+    --cell-size: 1.6rem;
+    --font-size: 1rem;
+  }
+
+  main {
+    grid-template-rows: 10% auto 10%;
+  }
+
+  .table {
+    padding: 0.2rem 1rem 0.2rem 1rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.15rem solid #000;
+    padding: 0.1rem 1.3rem;
+  }
+
+  .starter__modal__text,
+  .endgame__modal__text {
+    font-size: 3rem;
+  }
+
+  .starter__modal__input__player1,
+  .starter__modal__input__player2 {
+    font-size: 1.2rem;
+  }
+
+  .starter__modal__button,
+  .endgame__modal__button {
+    padding: 0.3rem 1.5rem;
+    font-size: 2rem;
+  }
+} */
+
+@media only screen and (min-width: 320px) {
+  main {
+    grid-template-rows: 8.5% auto 8.5%;
+  }
+  :root {
+    --cell-size: 1.8em;
+    --font-size: 0.8rem;
+  }
+
+  .table {
+    padding: 0.1rem 1rem 0.1rem 1rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.15rem solid #000;
+    padding: 0.1rem 1.3rem;
+  }
+
+  .red {
+    box-shadow: 0px 0px 0px 0.25rem rgb(255, 70, 70) inset;
+  }
+
+  .black {
+    box-shadow: 0px 0px 0px 0.25rem rgb(80, 80, 80) inset;
+  }
+
+  .redKing {
+    box-shadow: 0px 0px 0px 0.25rem red inset;
+  }
+
+  .blackKing {
+    box-shadow: 0px 0px 0px 0.25rem rgb(45, 45, 45) inset;
+  }
+
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .starter__modal__text,
+  .endgame__modal__text {
+    font-size: 3.5rem;
+  }
+
+  .starter__modal__input__player1,
+  .starter__modal__input__player2 {
+    font-size: 1.3rem;
+  }
+
+  .starter__modal__button,
+  .endgame__modal__button {
+    font-size: 1.8rem;
+  }
+}
+
+@media only screen and (min-width: 481px) {
+  :root {
+    --cell-size: 1.8em;
+    --font-size: 0.8rem;
+  }
+
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+@media only screen and (min-width: 641px) {
+  :root {
+    --cell-size: 1.3em;
+    --font-size: 0.9rem;
+  }
+
+  .starter__modal__text,
+  .endgame__modal__text {
+    font-size: 3.5rem;
+  }
+
+  .starter__modal__input__player1,
+  .starter__modal__input__player2 {
+    font-size: 1.3rem;
+  }
+
+  .starter__modal__button,
+  .endgame__modal__button {
+    font-size: 1.8rem;
+  }
+}
+
+/* @media (orientation: landscape) and (min-width: 568px) {
+  :root {
+    --cell-size: 2.4rem;
+    --font-size: 1.2rem;
+  }
+} */
+
+@media only screen and (min-width: 736px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 100vw;
+    height: 80vh;
+  }
+
+  :root {
+    --cell-size: 1.8em;
+    --font-size: 1rem;
+  }
+
+  .starter__modal__text,
+  .endgame__modal__text {
+    font-size: 3.5rem;
+  }
+
+  .starter__modal__input__player1,
+  .starter__modal__input__player2 {
+    font-size: 1.7rem;
+  }
+
+  .starter__modal__button,
+  .endgame__modal__button {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 801px) {
+  :root {
+    --cell-size: 1.8rem;
+    --font-size: 1rem;
+  }
+
+  .table {
+    padding: 0rem 1.5rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.15rem solid #000;
+  }
+
+  .red {
+    box-shadow: 0px 0px 0px 0.3rem rgb(255, 70, 70) inset;
+  }
+
+  .black {
+    box-shadow: 0px 0px 0px 0.3rem rgb(80, 80, 80) inset;
+  }
+
+  .redKing {
+    box-shadow: 0px 0px 0px 0.3rem red inset;
+  }
+
+  .blackKing {
+    box-shadow: 0px 0px 0px 0.3rem rgb(45, 45, 45) inset;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+  :root {
+    --cell-size: 4em;
+    --font-size: 2rem;
+  }
+  .player1__timer,
+  .player2__timer {
+    border: 0.2rem solid #000;
+    padding: 0.2rem 1.3rem;
+  }
+
+  .red {
+    box-shadow: 0px 0px 0px 0.6rem rgb(255, 70, 70) inset;
+  }
+
+  .black {
+    box-shadow: 0px 0px 0px 0.6rem rgb(80, 80, 80) inset;
+  }
+
+  .redKing {
+    box-shadow: 0px 0px 0px 0.6rem red inset;
+  }
+
+  .blackKing {
+    box-shadow: 0px 0px 0px 0.6rem rgb(45, 45, 45) inset;
+  }
+}
+
+@media only screen and (min-width: 1281px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 70vw;
+    height: 70vh;
+  }
+  :root {
+    --cell-size: 5.5em;
+    --font-size: 2.5rem;
+  }
+
+  .red {
+    box-shadow: 0px 0px 0px 0.85rem rgb(255, 70, 70) inset;
+  }
+
+  .black {
+    box-shadow: 0px 0px 0px 0.85rem rgb(80, 80, 80) inset;
+  }
+
+  .redKing {
+    box-shadow: 0px 0px 0px 0.85rem red inset;
+  }
+
+  .blackKing {
+    box-shadow: 0px 0px 0px 0.85rem rgb(45, 45, 45) inset;
+  }
+}
+/* @media (orientation: portrait) and (min-width: 320px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 100vw;
+    height: 80vh;
+  }
+
+  :root {
+    --cell-size: 1.6rem;
+    --font-size: 1rem;
+  }
+
+  main {
+    grid-template-rows: 10% auto 10%;
+  }
+
+  .table {
+    padding: 0.2rem 1rem 0.2rem 1rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.15rem solid #000;
+    padding: 0.1rem 1.3rem;
+  }
+}
+
+@media (orientation: landscape) and (min-width: 320px) {
+  main {
+    grid-template-rows: 10% auto 10%;
+  }
+  :root {
+    --cell-size: 1.6rem;
+    --font-size: 0.9rem;
+  }
+
+  .table {
+    padding: 0.2rem 1rem 0.2rem 1rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.15rem solid #000;
+    padding: 0.1rem 1.3rem;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 375px) {
+  :root {
+    --cell-size: 2rem;
+    --font-size: 0.9rem;
+  }
+}
+@media (orientation: landscape) and (min-width: 375px) {
+  :root {
+    --cell-size: 1.7rem;
+    --font-size: 0.9rem;
+  }
+
+  main {
+    grid-template-rows: 9% auto 9%;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 410px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 90vw;
+    height: 80vh;
+  }
+
+  :root {
+    --cell-size: 2.2rem;
+    --font-size: 1.1rem;
+  }
+  main {
+    grid-template-rows: 8% auto 8%;
+  }
+}
+
+
+@media (orientation: landscape) and (min-width: 515px) {
+  :root {
+    --cell-size: 2.35rem;
+    --font-size: 1.2rem;
+  }
+
+  main {
+    grid-template-rows: 10% auto 10%;
+  }
+}
+
+@media (orientation: landscape) and (min-width: 568px) {
+  :root {
+    --cell-size: 1.76rem;
+    --font-size: 0.9rem;
+  }
+
+  main {
+    grid-template-rows: 8.5% auto 8.5%;
+  }
+}
+
+@media (orientation: landscape) and (min-width: 568px) {
+  :root {
+    --cell-size: 2.4rem;
+    --font-size: 1.2rem;
+  }
+}
+
+@media (orientation: landscape) and (min-width: 768px) {
+  .starter__modal__content,
+  .endgame__modal__content {
+    width: 70vw;
+    height: 50vh;
+  }
+
+  :root {
+    --cell-size: 2.1rem;
+    --font-size: 1.2rem;
+  }
+
+  main {
+    grid-template-rows: 10% auto 10%;
+  }
+
+  .table {
+    padding: 0rem 1.5rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    border: 0.2rem solid #000;
+  }
+} */
