--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,26 @@ main {
   grid-row: 1;
 } */
 
+.languageButton,
+.starter__modal__languageButton,
+.mustCapture__modal__languageButton,
+.endgame__modal__languageButton {
+  cursor: pointer;
+  position: fixed;
+  top: 0%;
+  right: 5%;
+  margin-top: 0.5rem;
+  background-image: url(../assets/language.png);
+  background-size: 100% 100%;
+  background-position: center;
+  width: calc(var(--font-size) * 1.7);
+  height: calc(var(--font-size) * 1.7);
+}
+
+.languageButton--hidden {
+  visibility: hidden;
+}
+
 .table {
   /* position: relative; */
   /* top: 50%;
@@ -285,6 +305,7 @@ main {
 .starter__modal,
 .endgame__modal,
 .mustCapture__modal {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -365,49 +386,6 @@ main {
   visibility: hidden;
 }
 
-/* @media only screen and (min-width: 320px) {
-  .starter__modal__content,
-  .endgame__modal__content {
-    width: 100vw;
-    height: 80vh;
-  }
-
-  :root {
-    --cell-size: 1.6rem;
-    --font-size: 1rem;
-  }
-
-  main {
-    grid-template-rows: 10% auto 10%;
-  }
-
-  .table {
-    padding: 0.2rem 1rem 0.2rem 1rem;
-  }
-
-  .player1__timer,
-  .player2__timer {
-    border: 0.15rem solid #000;
-    padding: 0.1rem 1.3rem;
-  }
-
-  .starter__modal__text,
-  .endgame__modal__text {
-    font-size: 3rem;
-  }
-
-  .starter__modal__input__player1,
-  .starter__modal__input__player2 {
-    font-size: 1.2rem;
-  }
-
-  .starter__modal__button,
-  .endgame__modal__button {
-    padding: 0.3rem 1.5rem;
-    font-size: 2rem;
-  }
-} */
-
 @media only screen and (min-width: 320px) {
   main {
     grid-template-rows: 8.5% auto 8.5%;
@@ -467,6 +445,24 @@ main {
   .mustCapture__modal__button,
   .endgame__modal__button {
     font-size: 1.8rem;
+  }
+
+  .languageButton,
+  .starter__modal__languageButton,
+  .mustCapture__modal__languageButton,
+  .endgame__modal__languageButton {
+    width: calc(var(--font-size) * 2);
+    height: calc(var(--font-size) * 2);
+  }
+}
+
+@media only screen and (min-width: 360px) {
+  .languageButton,
+  .starter__modal__languageButton,
+  .mustCapture__modal__languageButton,
+  .endgame__modal__languageButton {
+    width: calc(var(--font-size) * 3.3);
+    height: calc(var(--font-size) * 3.3);
   }
 }
 
@@ -542,6 +538,14 @@ main {
   .endgame__modal__button {
     font-size: 2rem;
   }
+
+  .languageButton,
+  .starter__modal__languageButton,
+  .mustCapture__modal__languageButton,
+  .endgame__modal__languageButton {
+    width: calc(var(--font-size) * 3);
+    height: calc(var(--font-size) * 3);
+  }
 }
 
 @media only screen and (min-width: 801px) {
@@ -605,6 +609,14 @@ main {
 
   .blackKing {
     box-shadow: 0px 0px 0px 0.6rem rgb(45, 45, 45) inset;
+  }
+
+  .languageButton,
+  .starter__modal__languageButton,
+  .mustCapture__modal__languageButton,
+  .endgame__modal__languageButton {
+    width: calc(var(--font-size) * 2);
+    height: calc(var(--font-size) * 2);
   }
 }
 
