--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,8 @@ main {
 
 .starter__modal,
 .endgame__modal,
-.mustCapture__modal {
+.mustCapture__modal,
+.board__modal {
   z-index: 1;
   position: fixed;
   top: 0;
@@ -316,6 +317,10 @@ main {
   text-align: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.board__modal {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .starter__modal__content,
@@ -382,7 +387,8 @@ main {
 
 .endgame__modal--hidden,
 .mustCapture__modal--hidden,
-.starter__modal--hidden {
+.starter__modal--hidden,
+.board__modal--hidden {
   visibility: hidden;
 }
 
@@ -465,6 +471,10 @@ main {
     width: calc(var(--font-size) * 3.3);
     height: calc(var(--font-size) * 3.3);
   }
+
+  .endgame__modal__button {
+    margin-bottom: 0.6rem;
+  }
 }
 
 @media only screen and (min-width: 481px) {
@@ -478,6 +488,14 @@ main {
   .endgame__modal__content {
     width: 100vw;
     height: 100vh;
+  }
+}
+
+@media only screen and (min-width: 560px) {
+  .endgame__modal__button {
+    margin-bottom: 0;
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
   }
 }
 
