--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 main {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   display: grid;
@@ -235,8 +237,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   text-align: center;
@@ -252,8 +254,8 @@ main {
 .endgame__modal__content,
 .mustCapture__modal__content,
 .rules__modal__content {
-  width: 50vw;
-  height: 50vh;
+  width: 50%;
+  height: 50%;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -296,7 +298,7 @@ main {
 .starter__modal__input__player2 {
   border: 0.3rem solid #000;
   padding: 1rem 2rem;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   font-size: 2rem;
   outline: none;
   text-transform: uppercase;
@@ -384,8 +386,8 @@ main {
   .mustCapture__modal__content,
   .endgame__modal__content,
   .rules__modal__content {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
 
   .starter__modal__text,
@@ -413,7 +415,7 @@ main {
 
   .rules__modal__button {
     font-size: 1.2rem;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 1rem;
   }
 
   .languageButton,
@@ -447,14 +449,6 @@ main {
     --font-size: 0.8rem;
   }
 
-  .starter__modal__content,
-  .mustCapture__modal__content,
-  .endgame__modal__content,
-  .rules__modal__content {
-    width: 100vw;
-    height: 100vh;
-  }
-
   .player1__name,
   .player2__name {
     margin: 0 2rem 0 0.5rem;
@@ -483,19 +477,22 @@ main {
   .starter__modal__text,
   .endgame__modal__text,
   .rules__modal__text {
-    font-size: 3.5rem;
+    font-size: 2.2rem;
   }
 
   .starter__modal__input__player1,
   .starter__modal__input__player2 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .starter__modal__button,
   .mustCapture__modal__button,
-  .endgame__modal__button,
+  .endgame__modal__button {
+    font-size: 1.5rem;
+  }
+
   .rules__modal__button {
-    font-size: 1.8rem;
+    font-size: 1.25rem;
   }
 
   .player1__timer,
@@ -522,7 +519,7 @@ main {
   }
 
   .rules__modal__text {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
 
   .starter__modal__input__player1,
@@ -534,7 +531,7 @@ main {
   .mustCapture__modal__button,
   .endgame__modal__button,
   .rules__modal__button {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .languageButton,
@@ -550,8 +547,7 @@ main {
   }
 
   .rules__modal__button {
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 1rem;
   }
 }
 
@@ -593,15 +589,10 @@ main {
   }
 
   .rules__modal__text {
-    font-size: 3.5rem;
+    font-size: 2.2rem;
   }
   .rules__modal__rule {
-    font-size: 0.9rem;
-  }
-
-  .rules__modal__button {
-    font-size: 2rem;
-    padding: 0.5rem 1.4rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -652,6 +643,10 @@ main {
     width: calc(var(--font-size) * 2);
     height: calc(var(--font-size) * 2);
   }
+
+  .rules__modal__button {
+    padding: 0.5rem 1.4rem;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -659,8 +654,8 @@ main {
   .mustCapture__modal__content,
   .endgame__modal__content,
   .rules__modal__content {
-    width: 100vw;
-    height: 90vh;
+    width: 100%;
+    height: 90%;
   }
 
   .player1__name,
@@ -682,8 +677,8 @@ main {
   .mustCapture__modal__content,
   .endgame__modal__content,
   .rules__modal__content {
-    width: 100vw;
-    height: 80vh;
+    width: 100%;
+    height: 80%;
   }
 }
 
@@ -692,8 +687,8 @@ main {
   .mustCapture__modal__content,
   .endgame__modal__content,
   .rules__modal__content {
-    width: 70vw;
-    height: 70vh;
+    width: 70%;
+    height: 70%;
   }
   :root {
     --cell-size: 4em;
@@ -710,8 +705,8 @@ main {
   .mustCapture__modal__content,
   .endgame__modal__content,
   .rules__modal__content {
-    width: 70vw;
-    height: 70vh;
+    width: 70%;
+    height: 70%;
   }
   :root {
     --cell-size: 5.5em;
