--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ main {
   height: calc(var(--font-size) * 1.7);
   z-index: 5;
   transition: all 0.4s ease;
-  transform: rotate(0);
+  transform: rotate(0deg);
 }
 
 .rulesButton {
@@ -75,7 +75,7 @@ main {
 
 .languageButton:hover {
   /* transform: rotate(12deg); */
-  transform: skew(-12deg);
+  transform: rotate(12deg);
 }
 
 .table {
@@ -246,6 +246,10 @@ main {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+.rules__modal {
+  flex-direction: column;
+}
+
 .board__modal {
   background-color: rgba(0, 0, 0, 0.1);
 }
@@ -254,7 +258,7 @@ main {
 .endgame__modal__content,
 .mustCapture__modal__content,
 .rules__modal__content {
-  width: 50%;
+  width: 100%;
   height: 50%;
   background-color: #fff;
   display: flex;
@@ -263,8 +267,11 @@ main {
   justify-content: space-around;
 }
 
-.rules__modal__content {
+.rules__modal__list {
   align-items: stretch;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 10px 0;
 }
 
 .starter__modal__text,
@@ -275,12 +282,16 @@ main {
   text-transform: uppercase;
 }
 
+.rules__modal__text {
+  padding: 10px 0;
+}
+
 .rules__modal__rule {
   margin: 0 0.5em 0 1.5em;
   text-align: justify;
   padding: 0 0.6rem;
   text-transform: uppercase;
-  font-size: 0.72rem;
+  font-size: 1rem;
 }
 
 .mustCapture__modal__text {
@@ -297,11 +308,12 @@ main {
 .starter__modal__input__player1,
 .starter__modal__input__player2 {
   border: 0.3rem solid #000;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   margin-top: 1.5rem;
   font-size: 2rem;
   outline: none;
   text-transform: uppercase;
+  /* width: 90%; */
 }
 
 .starter__modal__button,
@@ -320,8 +332,10 @@ main {
 }
 
 .rules__modal__button {
+  border: 0.2rem solid #000;
   align-self: center;
   width: 10em;
+  margin: 5px auto 10px;
 }
 
 .starter__modal__button:hover,
@@ -404,7 +418,7 @@ main {
 
   .starter__modal__input__player1,
   .starter__modal__input__player2 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   .starter__modal__button,
@@ -576,7 +590,7 @@ main {
   .red {
     box-shadow: 0px 0px 0px 0.3rem var(--red-box-shadow-piece-color) inset;
   }
-  rgb .black {
+  .black {
     box-shadow: 0px 0px 0px 0.3rem var(--black-box-shadow-piece-color) inset;
   }
 
@@ -589,10 +603,7 @@ main {
   }
 
   .rules__modal__text {
-    font-size: 2.2rem;
-  }
-  .rules__modal__rule {
-    font-size: 0.8rem;
+    font-size: 2.4rem;
   }
 }
 
@@ -602,8 +613,21 @@ main {
     --font-size: 2rem;
   }
 
+  .rules__modal__content {
+    width: 80%;
+    height: 100%;
+  }
+
   .rules__modal__rule {
     font-size: 1.4rem;
+  }
+
+  .rules__modal__text {
+    font-size: 3rem;
+  }
+
+  .rules__modal__button {
+    font-size: 2.3rem;
   }
 }
 
@@ -668,8 +692,16 @@ main {
     margin: 0 2rem;
   }
 
+  .rules__modal__text {
+    font-size: 3.2rem;
+  }
+
   .rules__modal__rule {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+  }
+
+  .rules__modal__button {
+    font-size: 2.2rem;
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -731,5 +763,15 @@ main {
 
   .rules__modal__rule {
     font-size: 1.3rem;
+  }
+}
+
+@media (hover: none) {
+  .rulesButton {
+    background: rgba(255, 140, 80, 1) url(../assets/info-circle-solid.svg);
+  }
+
+  .languageButton:hover {
+    transform: rotate(0deg);
   }
 }
